# sidereal

./: .dockerignore  .gitignore  .vercelignore  AGENTS.md  AGENT_HANDOFF.md  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  rust-toolchain.toml  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
app/: .env.example  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  vercel.json  vitest.config.ts
contracts/amm/: AGENTS.md  Cargo.toml
contracts/amm/src/: lib.rs
contracts/amm/test_snapshots/test/: first_liquidity_seeds_market_state.1.json  initialize_stores_config_and_empty_state.1.json  remove_liquidity_returns_pro_rata_assets.1.json  swap_pt_for_sy_updates_reserves_and_observation.1.json  swap_sy_for_pt_updates_reserves_and_observation.1.json  swap_sy_for_yt_respects_min_out.1.json  swap_sy_for_yt_routes_through_same_market_state_as_pt_purchase.1.json  swap_yt_for_sy_routes_through_same_market_state_as_pt_sale.1.json  unsupported_routes_still_revert.1.json
contracts/blend-adapter/: Cargo.toml
contracts/blend-adapter/src/: lib.rs
contracts/sy-wrapper/: AGENTS.md  Cargo.toml
contracts/sy-wrapper/src/: lib.rs
contracts/sy-wrapper/test_snapshots/test/: accrued_yield_tracks_exchange_rate_growth.1.json  deposit_mints_shares_at_current_rate.1.json  deposit_overflow_is_rejected.1.json  deposit_pulls_underlying_and_mints_shares.1.json  deposit_share_math_overflow_is_rejected.1.json  exchange_rate_before_initialize_fails.1.json  initialize_sets_initial_exchange_rate.1.json  redeem_overflow_is_rejected.1.json  redeem_returns_underlying_and_reduces_principal.1.json  redeem_underlying_math_overflow_is_rejected.1.json  sy_transfers_move_shares.1.json  transfer_moves_principal_pro_rata_so_yield_stays_correct.1.json
contracts/yt-token/: AGENTS.md  Cargo.toml
contracts/yt-token/src/: lib.rs
contracts/yt-token/test_snapshots/test/: approve_and_transfer_from_spend_allowance.1.json  burn_reduces_balance_and_supply.1.json  checkpoints_are_isolated_per_holder.1.json  claim_banks_yield_using_the_telescoping_formula.1.json  claim_uses_exchange_rate_delta_times_balance.1.json  claim_uses_exchange_rate_delta_times_real_balance.1.json  first_claim_at_mint_rate_accrues_nothing.1.json  first_claim_seeds_checkpoint_without_accruing_prior_yield.1.json  mint_extends_instance_ttl.1.json  mint_increases_balance_and_supply.1.json  mint_settles_fresh_holder_to_current_rate.1.json  transfer_moves_balance.1.json  transfer_rejects_insufficient_balance.1.json  yield_is_conserved_across_a_transfer.1.json
deployments/: README.md  testnet.toml
docs/: DEMO.md
scripts/: check-frontend-testnet.sh  check-wasm-floats.sh  codex-loop.sh  codex-parallel.sh  deploy-testnet-resilient.sh  deploy-testnet.sh  prove-testnet-amm-routes.sh  render-demo-runner-start.sh  seed-demo.sh  smoke-blend-testnet.sh  smoke-testnet.sh
sdk/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/test_snapshots/: amm_swap_round_trip_charges_fees.1.json  amm_wires_to_the_same_market.1.json  amm_yt_route_executes_in_the_internal_model.1.json  amm_yt_route_waits_for_ws5_settlement.1.json  blend_supply_rate_growth_yield_claim_and_withdraw_round_trip.1.json  escrow_covers_outstanding_claims.1.json  flash_route_top_level_auth_is_arg_pinned.1.json  flash_route_user_only_signs_the_swap.1.json  pt_redeems_one_to_one_after_maturity.1.json  pt_redeems_to_principal_not_share.1.json  redeem_allowed_at_exact_maturity.1.json  redemption_is_capped_when_rate_regresses.1.json  redemption_uses_frozen_maturity_rate.1.json  split_and_recombine_survive_a_rate_regression.1.json  split_rejects_at_exact_maturity.1.json  split_then_recombine_preserves_sy.1.json  transfer_conserves_yield_through_claims.1.json  yt_claim_reverts_when_it_would_breach_pt_coverage.1.json  yt_flash_route_round_trips_through_the_tokenizer.1.json  yt_receives_yield_on_claim.1.json
tests/integration/tests/: auth_invariants.rs  blend_wrapper.rs  economics.rs  journey.rs
(+88 files in other folders)
