# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
# All contract crates plus the shared interface, integrated across columns.
members = [
    "contracts/amm",
    "contracts/blend-adapter",
    "contracts/pt-token",
    "contracts/sy-wrapper",
    "contracts/shared/types",
    "contracts/tokenizer",
    "contracts/yt-token",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"
license = "Apache-2.0"
repository = "https://github.com/PoulavBhowmick03/sidereal"

[workspace.dependencies]
soroban-sdk = { version = "=26.1.0", default-features = false }
