# SPDX-License-Identifier: Apache-2.0

[package]
name = "sidereal-sy-wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sidereal-blend-adapter = { path = "../blend-adapter" }
sidereal-shared-types = { path = "../shared/types" }
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
