# SPDX-License-Identifier: Apache-2.0

[package]
name = "sidereal-yt-token"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sidereal-sy-wrapper = { path = "../sy-wrapper" }
